kubernetes/l7mp/udp/init.yaml
# rtpe-controller
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rtpe-controller
  labels:
    app: rtpe-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rtpe-controller
  template:
    metadata:
      labels:
        app: rtpe-controller
    spec:
      volumes:
        - name: l7mp-config-volume
          configMap:
            name: l7mp-worker-config
      containers:
        # sidecar
        - name: l7mp
          image: l7mp/l7mp:latest
          imagePullPolicy: IfNotPresent
          # command: ["/bin/sh"]
          # args: ["-c", "while true; do echo hello; sleep 10;done"]
          command: ["node"]
          args:
            [
              "l7mp-proxy.js",
              "-c",
              "config/l7mp-worker.yaml",
              "-s",
              "-l",
              "info",
            ]
          ports:
            - containerPort: 1234
          volumeMounts:
            - name: l7mp-config-volume
              mountPath: /app/config
        - name: net-debug
          image: l7mp/net-debug:0.5.3
        - name: rtpe-controller
          image: rtpe-controller
          imagePullPolicy: Never
---
# l7mp-worker
apiVersion: apps/v1
kind: Deployment
metadata:
  name: l7mp-worker
  labels:
    app: l7mp-worker
spec:
  # replicas: 2
  replicas: 1
  selector:
    matchLabels:
      app: l7mp-worker
  template:
    metadata:
      labels:
        app: l7mp-worker
    spec:
      volumes:
        - name: l7mp-config-volume
          configMap:
            name: l7mp-worker-config
        - name: rtpengine-config-volume
          configMap:
            name: rtpengine-config
        - name: kernel-debug
          hostPath:
            path: /sys/kernel/debug
            type: Directory
      containers:
        # sidecar
        - name: l7mp
          image: l7mp/l7mp:latest
          imagePullPolicy: IfNotPresent
          # command: ["/bin/sh"]
          # args: ["-c", "while true; do echo hello; sleep 10;done"]
          command: ["node"]
          args:
            [
              "l7mp-proxy.js",
              "-c",
              "config/l7mp-worker.yaml",
              "-s",
              "-l",
              "info",
            ]
          ports:
            - containerPort: 1234
          volumeMounts:
            - name: l7mp-config-volume
              mountPath: /app/config
        - name: net-debug
          image: l7mp/net-debug:0.5.3
        - name: rtpengine
          image: drachtio/rtpengine
          imagePullPolicy: IfNotPresent
          # command: ["/bin/sh"]
          # args: ["-c", "while true; do echo hello; sleep 10;done"]
          command: ["/usr/local/bin/rtpengine"]
          args:
            [
              "--config-file=/etc/rtpengine/rtpengine.conf",
              "-i",
              "lo",
              "-f",
              "-L",
              "7",
              "-E",
            ]
          volumeMounts:
            - name: rtpengine-config-volume
              mountPath: /etc/rtpengine
---
# l7mp-worker-service
apiVersion: v1
kind: Service
metadata:
  labels:
    app: l7mp-worker
  name: l7mp-worker
spec:
  ports:
    - port: 1234
      name: http-control-port
      protocol: TCP
      targetPort: 1234
    - port: 22222
      name: udp-rtpengine-ng-port
      protocol: UDP
      targetPort: 22222
  selector:
    app: l7mp-worker
  type: ClusterIP
---
# rtpe-controller-service
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rtpe-controller
  name: rtpe-controller
spec:
  ports:
    - port: 1234
      name: http-control-port
      protocol: TCP
      targetPort: 1234
    - port: 2000
      name: rtpe-controller-port
      protocol: UDP
      targetPort: 2000
  selector:
    app: rtpe-controller
  type: ClusterIP
