kubernetes/l7mp/udp/miscs.yaml
apiVersion: l7mp.io/v1
kind: VirtualService
metadata:
  name: ingress-controller-listener
spec:
  selector:
    matchLabels:
      app: l7mp-ingress
  listener:
    spec:
      UDP:
        port: 22222
    rules:
      - action:
          route:
            destinationRef: /l7mp.io/v1/Target/default/ingress-controller-target
            retry:
                retry_on: always
                num_retries: 10
                timeout: 500
          rewrite:
            - path: HTTP/headers/
              value:
                place-holder: place-holder
---
apiVersion: l7mp.io/v1
kind: VirtualService
metadata:
  name: worker-ng-listener
spec:
  selector:
    matchLabels:
      app: l7mp-worker
  listener:
    spec:
      WebSocket:
        port: 22222
    rules:
      - action:
          route:
            destinationRef: /l7mp.io/v1/Target/default/worker-ng-target
            retry:
              retry_on: never
              num_retries: 10
              timeout: 500
---
apiVersion: l7mp.io/v1
kind: VirtualService
metadata:
  name: controller-listener
spec:
  selector:
    matchLabels:
      app: rtpe-controller
  listener:
    spec:
      WebSocket:
        port: 2000
    rules:
      - action:
          route:
            destinationRef: /l7mp.io/v1/Target/default/controller-target
---
apiVersion: l7mp.io/v1
kind: VirtualService
metadata:
  name: controller-ng-listener
spec:
  selector:
    matchLabels:
      app: rtpe-controller
  listener:
    spec:
      WebSocket:
        port: 22221
    rules:
      - action:
          route:
            destinationRef: /l7mp.io/v1/Target/default/controller-ng-target
